<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dash Wallet</string>
    <string name="balance">Balance:</string>
    <string name="pending">Pending:</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="other">Other</string>
    <string name="history">History</string>
    <string name="encrypt">Encrypt</string>
    <string name="backup">Backup</string>
    <string name="main_menu">Main Menu</string>
    <string name="backup_wallet">Backup Wallet</string>
    <string name="show_seed">Show Seed</string>
    <string name="to_file">To File</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="pin">Pin:</string>
    <string name="confirm">Confirm:</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="initialize_wallet">Initialize Wallet</string>
    <string name="create_new">Create New</string>
    <string name="restore">Restore</string>
    <string name="share">Share</string>
    <string name="restore_wallet">Restore Wallet</string>
    <string name="from_seed">From Seed</string>
    <string name="from_file">From File</string>
    <string name="ix">IX</string>
    <string name="fee">(0.01 fee)</string>
    <string name="amount">Amount:</string>
    <string name="recipient">Recipient:</string>
    <string name="scan_qr">SCAN QR</string>
    <string name="seed">Seed</string>
    <string name="action_settings">Settings</string>
    <string name="currentDir">Current Dir</string>
    <string name="fileSize">File Size</string>
    <string name="folder">Folder</string>
    <string name="parentDirectory">Parent Directory</string>
    <string name="openFolder">Open folder</string>
    <string name="selectThis">Select this</string>
    <string name="optionSelection">Option selection</string>
    <string name="decrypt">Unencrypt Wallet</string>
    <string name="wallet_unencrypted">Wallet is now unencrypted</string>
    <string name="word">Word</string>
    <string name="of">of</string>
    <string name="toast_crash">Dash Wallet has stopped working</string>

    <string name="sendDashDialogTitle">Send Dash</string>
    <string name="sendDashDialogPositiveButton">@string/send</string>
    <string name="sendDashDialogNegativeButton">@string/cancel</string>
    <string name="sendDashDialogAmountHint">Amount (balance: %s)</string>
    <string name="sendDashDialogRecipientHint">Recipient address</string>
    <string name="sendDashDialogInstantXText">Instant transaction</string>
    <string name="sendDashDialogInstantXFeeText">@string/fee</string>

</resources>
