<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#fff"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_title"
        android:textStyle="bold"
        android:textColor="#fff"
        android:textSize="28sp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:background="@color/theme_default"
        android:text="@string/backup_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_show_seed"
            android:text="@string/show_seed"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_to_file"
            android:layout_marginTop="10dp"
            android:text="@string/to_file"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btn_cancel_backup"
            android:text="@string/cancel"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>