<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/tv_title"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/theme_default"
        android:text="@string/enter_pin"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:padding="5dp"
        android:id="@+id/rl_pin"
        android:layout_below="@id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


            <EditText
                android:text=""
                android:textColor="#fff"
                android:background="#444"
                android:layout_marginTop="10dp"
                android:id="@+id/et_enter_pin"
                android:layout_marginRight="3dp"
                android:layout_marginLeft="3dp"
                android:textSize="25sp"
                android:password="true"
                android:inputType="number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_below="@id/et_enter_pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_ok_enter_pin"
                android:text="@string/ok"
                android:textAllCaps="true"
                android:layout_weight=".5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_cancel_enter_pin"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:layout_weight=".5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>