<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_amount_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_amount_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sendDashDialogAmountHint"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_recipient_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/et_recipient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownWidth="326dp"
                android:hint="@string/sendDashDialogRecipientHint"
                android:inputType="textCapSentences|textVisiblePassword" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btn_scan_send"
            style="@style/FancyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="Scan QR"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_send_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLength="50"
        android:padding="8dp"
        android:text="MESSAGE"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_alert_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:text="ADD RECIPIENT"
        android:textColor="#f00"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_ix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="true"
            android:text="@string/sendDashDialogInstantXText"
            android:textColor="#444"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_ix_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/sendDashDialogInstantXFeeText"
            android:textColor="#f00"
            android:textSize="12sp"
            android:visibility="visible" />
    </LinearLayout>

    <!-- Dummy item to prevent et_amount from receiving focus -->
    <LinearLayout
        android:id="@+id/fake_focus"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />

    </LinearLayout>
</LinearLayout>